kubernetes-manifests/deployment-autoscaler-lb.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "dabble-web-deployment"
  namespace: "default"
  labels:
    app: "dabble-web-deployment"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: "dabble-web-deployment"
  template:
    metadata:
      labels:
        app: "dabble-web-deployment"
    spec:
      containers:
      - name: "dabble-web-1"
        image: "docker.io/albertabdon/dabble-web"
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "dabble-web-deployment-service"
  namespace: "default"
  labels:
    app: "dabble-web-deployment"
spec:
  ports:
  - protocol: "TCP"
    port: 80
  selector:
    app: "dabble-web-deployment"
  type: "LoadBalancer"
  loadBalancerIP: ""
