kubernetes-manifests/dabble-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dabble-web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.global-static-ip-name: "dabble-global-ip"
spec:
  rules:
  - http:
      paths:
      - path: /path
        pathType: ImplementationSpecific
        backend:
          service:
            name: dabble-web-deployment-service
            port:
              number: 80
